[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"

[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist"]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C90"]
ignore = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["brain_games"]